--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "./app/app_index.js",
+  "main": "app_index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
